--- a/style.css
+++ b/style.css
@@ -2,24 +2,17 @@
  * Globals
  */
 
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-}
-
+ * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
 
 /*
  * Base structure
  */
 
-body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
+body {}
 
 
 /*
@@ -39,11 +32,10 @@ body {
      height: 100%;
      width: 100%;
      background: black;
-     opacity: 60%;
+     opacity: 50%;
      position: absolute;
      top: 0;
  }
-
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
