added the lets connect section

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {}
  */
 
   .banner-wrap {
-     background-image: url(./assets/banner.jpg);
+     background-image: url(./assets/banner.JPG);
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
