--- a/style.css
+++ b/style.css
@@ -58,3 +58,14 @@ body {}
   color: #fff;
   border-bottom-color: #fff;
 }
+
+/* header {
+  background: black;
+  opacity: 80%;
+} */
+
+.scrolling {
+  background-color: black;
+  opacity: 90%;
+  transition: all 0.5s;
+}
